# inviwo

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: inviwo.yml
apps/inviwo/: CMakeLists.txt  inviwo.cpp
apps/inviwo/packaging/: packaging.cmake
apps/inviwodome/: CMakeLists.txt
apps/inviwodome/src/: inviwodome.cpp
cmake/: filegeneration.cmake  installutils.cmake
ext/: CMakeLists.txt
include/inviwo/core/common/: modulemanager.h
include/inviwo/core/interaction/: eventtransformer.h
include/inviwo/core/properties/: raycastingproperty.h
include/inviwo/core/util/: glmconvert.h
modules/animation/src/: workspaceanimations.cpp
modules/basegl/: CMakeLists.txt
modules/basegl/src/: baseglmodule.cpp  viewmanager.cpp
modules/basegl/src/shadercomponents/: raycastingcomponent.cpp
modules/ffmpeg/: CMakeLists.txt
modules/meshandvolume/glsl/: myvolumerasterizer.frag
modules/meshandvolume/glsl/oit/: myabufferlinkedlist.glsl  mydisplay.frag
modules/meshandvolume/src/: meshandvolumemodule.cpp
modules/meshandvolume/src/processors/: mvrenderer.cpp  volumerasterizer.cpp
modules/meshandvolume/src/rendering/: myfragmentlistrenderer.cpp
modules/meshrenderinggl/glsl/: fancymeshrenderer.frag
modules/meshrenderinggl/glsl/oit/: abufferlinkedlist.glsl  commons.glsl  display.frag
modules/meshrenderinggl/src/datastructures/: rasterization.cpp
modules/meshrenderinggl/src/processors/: meshrasterizer.cpp
modules/nifti/src/: niftireader.cpp
modules/opengl/: CMakeLists.txt
modules/opengl/glsl/utils/: gradients.glsl
modules/opengl/src/texture/: textureunit.cpp
modules/sgct/src/: sgctmodule.cpp
modules/volume/src/: volumemodule.cpp
src/core/: CMakeLists.txt
src/core/common/: modulemanager.cpp
src/core/properties/: raycastingproperty.cpp
src/sys/: CMakeLists.txt
tools/standalone/devmodule/: CMakeLists.txt  readme.md
tools/standalone/devmodule/include/inviwo/devmodule/: devmodulemodule.h  devmodulemoduledefine.h  devmodulemodulesharedlibrary.h
tools/standalone/devmodule/include/inviwo/devmodule/processors/: exampleprocessor.h
tools/standalone/devmodule/src/: devmodulemodule.cpp  devmodulemodulesharedlibrary.cpp
tools/standalone/devmodule/src/processors/: exampleprocessor.cpp
(+14 files in other folders)
